@@ -8,7 +8,7 @@ Pass different port number in ARGV
 Have a generic error page, and push all errors to it
 Fix links in POD to go back to us
 Fix package links to go to a best-guess filename
-Fix tests to fail unless there is a mirror
+
 
 Maybe use LWP::Online and gravatar? 
 Improve searching - maybe use KinoSearch?
